# wxMatroska

./: .editorconfig  .gitignore  .gitmodules  .hgignore  CMakeLists.txt  ExternalLibraries.cmake  FFMPEG_DVD.TXT  PatchTagLib.cmake  app_config.h.in  cmake-init.ps1  cmp0074.cmake  ffmpeg.txt  format_source.cmd  make-package.ps1  make-workdir.cmake  make-workdir.ps1  make_video_mpeg4.cmd  make_video_x264.cmd  mingw-make-package.ps1  msvc-make-package.ps1  uncrustify.cfg  wxCueFile.sln  wxCueFile2008.sln  wxCueFile2010.sln
_mozjpg/: wxMozJpegImageHandler.cpp  wxMozJpegImageHandler.h
cpack/: InnoSetup.cmake  Installer.cmake  cpack.cmake.in  setup.iss
cpack/7-zip/: CMakeLists.txt
doc/: cue2mkc.txt  default.latex  styling.css
gui/: CMakeLists.txt  cue2mkcgui.au3  cue2mkcgui.kxf  icon_pack.rc
inc/: FmtSpec.h  StdWx.h  enum2str.h  sndfile.h  targetver.h  wxCueComponent.h  wxCueSheet.h  wxCueSheetReader.h  wxCueSheetRenderer.h  wxDataFile.h  wxEncodingDetection.h  wxIndex.h  wxJson.h  wxMediaInfo.h  wxSamplingInfo.h  wxTagSynonims.h  wxTextCueSheetRenderer.h  wxTrack.h  wxUTF8TextOutputStream.h  wxUnquoter.h
inc/wxCmdTools/: wxCmdTool.h
inc/wxConsoleApp/: MyAppConsole.h  MyAppTraits.h  MyConfiguration.h  MyLogStderr.h  MyMessageOutputStderr.h
inc/wxCueFile/: wxAsciiToUnicode.h  wxCoverFile.h  wxCueComponent.h  wxCueSheet.h  wxCueSheetContent.h  wxCueSheetReader.h  wxCueSheetRenderer.h  wxCueTag.h  wxDashesCorrector.h  wxDataFile.h  wxDuration.h  wxEllipsizer.h  wxIndex.h  wxMediaInfo.h  wxNumberFullStopCorrector.h  wxReduntantSpacesRemover.h  wxRegExStringProcessor.h  wxRomanNumeralsConv.h  wxSamplingInfo.h  wxSmallLetterParenthesizedCorrector.h  wxStringProcessor.h  wxTagSynonims.h  wxTextCueSheetRenderer.h  wxTextInputStreamOnString.h  wxTextOutputStreamOnString.h  (+4 more)
mu-img2pdf/: CMakeLists.txt
mu-img2pdf/gui/: CMakeLists.txt  Img2PdfGui.rc  LogListBox.cpp  StdWx.h  VariantExt.cpp  VariantExt.h  wxApp.cpp  wxApp.h  wxMainFrame.cpp  wxMainFrame.h
setup/: CMakeLists.txt  app_version.au3  app_version.ini  app_version.tmpl  license.md.txt  setup.iss  setup.vcproj  setup.vcxproj  setup.vcxproj.filters  template.rtf
tmpl/: CMakePresets.json  mingw-runtime-libs.cmake  mingw-toolchain.cmake  mingw64-config.cmake  msvc-config.cmake  utils.cmake  wx-widgets.cmake
wxCmdTools/: CMakeLists.txt  StdWx.h  wxCmdTool.cpp
wxConsoleApp/: CMakeLists.txt  MyAppConsole.cpp  MyAppTraits.cpp  MyConfiguration.cpp  StdWx.h  wxConsoleApp.vcxproj  wxConsoleApp.vcxproj.filters
wxCueChapters/: CMakeLists.txt  StdWx.cpp  StdWx.h  app.tags.json  ff-scan.cmake  license.txt  resource.h  wxApp.cpp  wxApp.h  wxCMakeScriptRenderer.cpp  wxCMakeScriptRenderer.h  wxConfiguration.cpp  wxConfiguration.h  wxCueChapters.cpp  wxCueChapters.rc  wxCueChapters.vcproj  wxCueChapters.vcxproj  wxCueChapters.vcxproj.filters  wxCuePointsRenderer.cpp  wxCuePointsRenderer.h  wxFfMetadataRenderer.cpp  wxFfMetadataRenderer.h  wxFfmpegCMakeScriptRenderer.cpp  wxFfmpegCMakeScriptRenderer.h  wxFileNameCorrector.cpp  wxFileNameCorrector.h  wxInputFile.cpp  wxInputFile.h  wxMkvmergeOptsRenderer.cpp  wxMkvmergeOptsRenderer.h  wxPrimitiveRenderer.cpp  wxPrimitiveRenderer.h  wxTemporaryFilesProvider.cpp  wxTemporaryFilesProvider.h  wxXmlCueSheetRenderer.cpp  wxXmlCueSheetRenderer.h
wxCueChapters/cmake/: dr-scan.cmake  ff-scan.cmake  mkcover.cmake
wxCueChapters/nbproject/: configurations.xml  project.xml
wxCueChaptersGui/: CMakeLists.txt  LogListBox.cpp  LogListBox.h  StdWx.h  wxApp.cpp  wxApp.h  wxCueChaptersGui.rc  wxMainFrame.cpp  wxMainFrame.h
wxCueFile/: CMakeLists.txt  StdWx.cpp  StdWx.h  wxAbstractMetaDataReader.h  wxAsciiToUnicode.cpp  wxCoverFile.cpp  wxCueComponent.cpp  wxCueFile.vcproj  wxCueFile.vcxproj  wxCueFile.vcxproj.filters  wxCueSheet.cpp  wxCueSheetContent.cpp  wxCueSheetReader.cpp  wxCueSheetRenderer.cpp  wxCueTag.cpp  wxDashesCorrector.cpp  wxDashesCorrector.h  wxDataFile.cpp  wxDuration.cpp  wxEllipsizer.cpp  wxEllipsizer.h  wxFlacDecoder.cpp  wxFlacDecoder.h  wxFlacMetaDataReader.cpp  wxFlacMetaDataReader.h  wxIndex.cpp  wxMd5.cpp  wxMd5.h  wxMediaInfo.cpp  wxNumberFullStopCorrector.cpp  wxNumberFullStopCorrector.h  wxReduntantSpacesRemover.cpp  wxReduntantSpacesRemover.h  wxRegExStringProcessor.cpp  wxRomanNumeralsConv.cpp  wxRomanNumeralsConv.h  wxSamplingInfo.cpp  wxSmallLetterParenthesizedCorrector.cpp  wxSmallLetterParenthesizedCorrector.h  wxStringCorrector.cpp  (+17 more)
wxCueFile/nbproject/: configurations.xml  project.xml
wxEncodingDetection/: CMakeLists.txt  StdWx.cpp  StdWx.h  wxEncodingDetection.cpp  wxEncodingDetection.vcproj  wxEncodingDetection.vcxproj  wxEncodingDetection.vcxproj.filters  wxMBConvUnaccent.hpp  wxMLangConvertCharset.cpp  wxMLangConvertCharset.h  wxMultiLanguage.cpp  wxMultiLanguage.h  wxTextInputStreamOnString.cpp  wxTextOutputStreamOnString.cpp  wxTextOutputStreamWithBOM.cpp  wxTextStreamUtils.cpp  wxUTF8TextOutputStream.cpp
wxFlacJoin/: StdWx.cpp  StdWx.h  wxApp.cpp  wxApp.h  wxConfiguration.cpp  wxConfiguration.h  wxFlacDecoder.cpp  wxFlacDecoder.h  wxFlacDecoderAndEncoder.cpp  wxFlacDecoderAndEncoder.h  wxFlacEncoder.cpp  wxFlacEncoder.h  wxFlacJoin.vcproj  wxFlacOutputStream.cpp  wxFlacOutputStream.h
wxWEBPHandler/: CMakeLists.txt  StdWx.h  imagwebp.cpp
wxWaw2Img/: AnimationSettings.cpp  AnimationSettings.h  ArrayWaveDrawer.cpp  ArrayWaveDrawer.h  Arrays.cpp  Arrays.h  AudioRenderer.cpp  AudioRenderer.h  ChannelMixer.cpp  ChannelMixer.h  ChaptersReader.cpp  ChaptersReader.h  ColourInterpolation.cpp  ColourInterpolation.h  CuePointsReader.cpp  CuePointsReader.h  DrawerSettings.cpp  DrawerSettings.h  FloatArray.cpp  FloatArray.h  Interval.cpp  Interval.h  LogarithmicScale.h  MCChainWaveDrawer.cpp  MCChainWaveDrawer.h  MCDcSvgWaveDrawer.cpp  MCDcSvgWaveDrawer.h  MCDcWaveDrawer.cpp  MCDcWaveDrawer.h  MCGraphicsContextWaveDrawer.cpp  MCGraphicsContextWaveDrawer.h  MCPdfWaveDrawer.cpp  MCPdfWaveDrawer.h  MemoryGraphicsContext.cpp  MemoryGraphicsContext.h  MultiChannelWaveDrawer.cpp  MultiChannelWaveDrawer.h  MyAppTraits.cpp  MyAppTraits.h  NinePatchBitmap.cpp  (+41 more)
(+13 files in other folders)
