FILE(GLOB CMD_TOOLS_HEADER_FILES "*.h")
GET_FILENAME_COMPONENT(CMD_TOOLS_DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME )
FILE(GLOB CMD_TOOLS_PUBLIC_HEADER_FILES "${WXMATROSKA_INCLUDE_DIR}/${CMD_TOOLS_DIR_NAME}/*.h")
SET(CMD_TOOLS_SOURCE_FILES
	wxCmdTool.cpp
)

ADD_LIBRARY(wxCmdTools 
	${CMD_TOOLS_SOURCE_FILES}
	${CMD_TOOLS_HEADER_FILES}
	${CMD_TOOLS_PUBLIC_HEADER_FILES}
)

TARGET_PRECOMPILE_HEADERS(wxCmdTools PRIVATE StdWx.h)
TARGET_INCLUDE_DIRECTORIES(wxCmdTools PRIVATE ${WXMATROSKA_INCLUDE_DIR})
SET_PROPERTY(TARGET wxCmdTools PROPERTY FOLDER "tool")
