file(GLOB CONSOLEAPP_HEADER_FILES "*.h")
get_filename_component(CONSOLEAPP_DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME )
file(GLOB CONSOLEAPP_PUBLIC_HEADER_FILES "${WXMATROSKA_INCLUDE_DIR}/${CONSOLEAPP_DIR_NAME}/*.h")
SET(CONSOLEAPP_SOURCE_FILES
	MyAppConsole.cpp
	MyAppTraits.cpp
	MyConfiguration.cpp
)

ADD_MSVC_PRECOMPILED_HEADER("StdWx.h" "StdWx.cpp" CONSOLEAPP_SOURCE_FILES )
add_library(wxConsoleApp
	${CONSOLEAPP_SOURCE_FILES}
	${CONSOLEAPP_HEADER_FILES}
	${CONSOLEAPP_PUBLIC_HEADER_FILES}
)
